--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,9 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_swiper: ^1.1.6
-
+  http: ^0.12.1
+  shared_preferences: ^0.5.7+3
+  flutter_webview_plugin: ^0.3.11
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
