--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   http: ^0.12.1
   shared_preferences: ^0.5.7+3
   flutter_webview_plugin: ^0.3.11
+  flutter_staggered_grid_view: ^0.3.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
